# scale_optimization

./: CMakeLists.txt  README.md  package.xml  rviz_sosvo_config.rviz
cams/aqua_gazebo/: T_stereo.yaml  camera0.txt  camera1.txt
include/: frame_handler_sosvo.h  initialization_sosvo.h  nlls_solver_1d.h  scale_optimizer.h  visualizer_sosvo.h
launch/: aqua.launch  aqua_gazebo.launch  euroc.launch  gazebo.launch  kitti02_1321.launch  kitti3.launch  kitti412.launch  sample.launch  sosvo_euroc.launch  sosvo_zed.launch  tum.launch  zed.launch
src/: DSVOSystem.cpp  DSVOSystem.h  SODSOSystem.cpp  SODSOSystem.h  ScaleAccumulator.h  ScaleOptimizer.cpp  ScaleOptimizer.h  dsvo_node.cpp  frame_handler_sosvo.cpp  initialization_sosvo.cpp  nlls_solver_1d.cpp  scale_optimizer.cpp  so_dso_node.cpp  sosvo_node.cpp  visualizer_sosvo.cpp
src/dso_helpers/: DSVOSystemDebugStuff.cpp  DSVOSystemMarginalize.cpp  DSVOSystemOptPoint.cpp  DSVOSystemOptimize.cpp  SODSOSystemDebugStuff.cpp  SODSOSystemMarginalize.cpp  SODSOSystemOptPoint.cpp  SODSOSystemOptimize.cpp
tests/cams/gazebo/: T_stereo.yaml  cam0.yaml  cam1.yaml  camera0.txt  camera1.txt
tests/cams/zed/: T_stereo.yaml  camera0.txt  camera1.txt
tests/gazebo/: brick.world  grass.world  note.txt  sim.launch  stereo_camera.urdf.xacro
tests/gazebo/stereobag2kitti/: README.txt  stereobag2euroc.py  stereobag2kitti.py
tests/matlab/: T_tum.mat  euroc_full.m  kitti_full.m  kitti_rot.m  rep_test.m  show_errors.m  show_traj.m  time_comp.m  tum_full.m
tests/matlab/archieved/: alignGT.m  show2d.m  show_traj.m
